# libraryname

./: .gitignore  .nojekyll  README.md  _quarto-book.yml  _quarto.yml  about.html  docs-run-notebooks.sh  index.html  pyproject.toml  release-tag.sh  robots.txt  search.json  setup.cfg  sitemap.xml  test.sh
.github/workflows/: conda-release.yml  publish_conda.yml  quarto-publish.yml
.scripts/: bump_version.py  release-tag.sh
api/: bar.baz.html  foo.html  index.html
conda-build/: meta.yaml
data/: Readme.html
docs/: _quarto.yml
docs/_inv/: python_objects.txt
docs/api/: foo.qmd
docs/examples/: dummy.qmd  index.qmd
docs/pages/: advanced.qmd  overview.qmd
examples/: dummy.html  index.html
libraryname/: modulename.py
notebooks/: example.html  example.ipynb
pages/: advanced.html  basics.html  example.html  examples.html  overview.html  something.html
scripts/: Readme.html  prune-project.sh  template_init.py
