[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "libraryname"
version = "0.2.10"
description = "Project description"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography",
    "jupyterlab>=4",
    "nbdime", 
    "seaborn",
    "scipy",
    "scikit-learn",
    "statsmodels",
]

[project.urls]
Homepage = "https://github.com/munch-group/libraryname"
Repository = "https://github.com/munch-group/libraryname"
Documentation = "https://munch-group.org/libraryname"

[project.scripts]
libraryname = "libraryname:libraryname"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["test*"]

[tool.setuptools.package-data]
libraryname = ["data/*.txt", "data/*.csv", "data/*.pickle", "data/*.h5"]

[tool.pixi.project]
name = "libraryname"
version = "0.2.10"
description = "Project description"
authors = ["Your Name <your@email.com>"]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.8"
git = "*"
git-lfs = "*"
gh = "*"
conda-build = "*"
cryptography = "*"
jupyterlab = ">=4"
nbdime = "*"
nodejs = "*"
seaborn = "*"
pytables = "*"
scipy = "*"
scikit-learn = "*"
statsmodels = "*"
pip = "*"

# [tool.pixi.pypi-dependencies]
# Optional PyPI dependencies can be added here
# Note: Some packages may not be available across all platforms

[tool.pixi.system-requirements]
macos = "10.15"
linux = "5.10"

[tool.pixi.tasks.install-dev]
cmd = "pip install -e ."
description = "Install the package in development mode"

[tool.pixi.tasks.release]
args = [
  { "arg" = "kind", "default" = "--patch" },  # can be --patch, --minor, --major
]
cmd = "./bump_version.py {{ kind }}  &&  git add -u &&  git commit -m '{{ kind }} version bump' &&  git push && ./release-tag.sh"
description = "Bump version patch and build/release conda packages"

[tool.pixi.tasks.test]
cmd = "python -m unittest"
description = "Run tests"

[tool.pixi.tasks.docs-build]
cmd = "./docs-build-render.sh"
description = "Build documentation"

[tool.pixi.tasks.docs-notebooks]
cmd = "./docs-run-notebooks.sh"
description = "Run documentation notebooks"

[tool.pixi.tasks.conda-release]
cmd = "./conda-release.sh"
description = "Release to conda"

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.dependencies]
pytest = "*"
black = "*"
ruff = "*"